# sightglass

./: .gitignore  Cargo.toml  README.md  README_Native  run_and_publish.sh  sg_runner.py  xi_data.sh
benchmarks-next/: build.sh
benchmarks-next/blake3-simd/: Makefile
benchmarks-next/bz2/: benchmark.wasm
benchmarks-next/meshoptimizer/: Dockerfile  Makefile  benchmark.wasm
benchmarks-next/shootout-ackermann/: benchmark.c
benchmarks-next/shootout-base64/: benchmark.c  benchmark.wasm
benchmarks-next/shootout-ctype/: benchmark.c  benchmark.wasm
benchmarks-next/shootout-ed25519/: benchmark.c
benchmarks-next/shootout-fib2/: Makefile  README_Native  benchmark.c  benchmark.wasm
benchmarks-next/shootout-gimli/: benchmark.c  benchmark.wasm
benchmarks-next/shootout-heapsort/: benchmark.c
benchmarks-next/shootout-keccak/: benchmark.c  benchmark.wasm
benchmarks-next/shootout-memmove/: benchmark.c  benchmark.wasm
benchmarks-next/shootout-minicsv/: benchmark.c
benchmarks-next/shootout-nestedloop/: benchmark.c  benchmark.wasm
benchmarks-next/shootout-random/: Makefile  benchmark.c  benchmark.wasm
benchmarks-next/shootout-ratelimit/: benchmark.c  benchmark.wasm
benchmarks-next/shootout-seqhash/: benchmark.wasm
benchmarks-next/shootout-sieve/: benchmark.c  benchmark.wasm
benchmarks-next/shootout-switch/: benchmark.wasm
benchmarks-next/shootout-xblabla20/: benchmark.c  benchmark.wasm
engines/native/libengine/: Cargo.toml
engines/native/libengine/src/: lib.rs
webui/: Dockerfile  config.inc
webui_runner/: Dockerfile  config.inc  sg_runner.py
(+86 files in other folders)
