[package]
name = "libengine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "native_bench_api"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
libloading = "0.7"
log = "0.4"

[workspace]